fixed header spacing

--- a/source/css/the.scss
+++ b/source/css/the.scss
@@ -497,7 +497,7 @@ nav {
   }
   nav {
     float: right;
-    width: 38%;
+    width: 40%;
     // font-size: 1.3em;
   }
   /* ============
